@@ -717,7 +717,11 @@ bool darwin_smart_interface::scan_smart_devices(smart_device_list & devlist,
     }
   }
   char * * nvmenames = 0; int numnvme = 0;
-  if (!type || !strcmp(type, "NVME")) {
+  if (
+#ifdef WITH_NVME_DEVICESCAN // TODO: Remove when NVMe support is no longer EXPERIMENTAL
+      !type ||
+#endif
+               !strcmp(type, "nvme")) {
     numnvme = make_device_names(&nvmenames, "NVME");
     if (numnvme < 0) {
       set_err(ENOMEM);
